archive/旧版本/v1.0.3/源码带注释/源码说明.md
# SonicRoute v1.0.3 源码说明（带注释）

> 本目录是该版本完整源码快照（已排除 bin/obj 编译产物）。以下为项目结构与核心机制注释，配合源码中的行内注释阅读。

## 项目结构

| 目录/文件 | 作用 |
|---|---|
| `SonicRoute/` | WPF 主程序（UI、托盘、快捷键、主题、多语言） |
| `SonicRoute.Core/` | 核心库：音频枚举、Per-App 路由、音量/静音、配置 |
| `SonicRoute.Core/Interop/` | COM 接口定义（IMMDevice、IAudioSessionManager2、IAudioPolicyConfig 等） |
| `SonicRoute.Core/AudioService.cs` | 设备/应用（会话）枚举、按应用切换输出设备 |
| `SonicRoute.Core/SessionVolumeService.cs` | 单独应用音量 / 静音（Audio Session API，ISimpleAudioVolume） |
| `SonicRoute.Core/GlobalMicMuteService.cs` | 全局麦克风静音（设备级 IAudioEndpointVolume） |
| `SonicRoute.Core/ConfigService.cs` | config.json 读写（%LocalAppData%\SonicRoute\config.json） |
| `SonicRoute.Core/AppDisplayName.cs` | **v1.0.3 新增**：应用自定义名称统一解析（通知/面板/概览/列表一致） |
| `SonicRoute/App.xaml.cs` | 入口：托盘图标、全局快捷键、OSD 通知、面板管理 |
| `SonicRoute/QuickPanelWindow.xaml(.cs)` | 托盘快捷面板（单击托盘弹出） |
| `SonicRoute/MainWindow.xaml(.cs)` | 完整管理界面（概览/应用/快捷键/主题/设置） |
| `SonicRoute/AppItem.cs` | 应用列表项视图模型（含图标） |
| `SonicRoute/L10n.cs` | 8 种语言文案表（键值对） |
| `SonicRoute/ThemeService.cs` | 深/浅色主题、强调色、透明度 |
| `SonicRoute/HotkeyService.cs` | 全局快捷键注册（RegisterHotKey） |
| `SonicRoute.Selftest/` | 回归自检（设备/会话/切换核心） |

## 核心机制（重点注释）

### 1. 按应用切换输出设备（EarTrumpet Per-App Routing）
- 不修改 Windows 系统默认设备
- 关键接口：`IAudioPolicyConfigFactory` → `SetPersistedDefaultAudioEndpoint`
- 设备 ID 需包装为完整接口路径：`GenerateDeviceId` / `UnpackDeviceId`
- 见 `SonicRoute.Core/AudioService.cs` 的 `ApplyEndpoint`

### 2. 单独应用音量
- 按 PID 聚合全部输出会话，逐个 `ISimpleAudioVolume.SetMasterVolume()`
- 绝不触碰系统主音量
- 见 `SonicRoute.Core/SessionVolumeService.cs`

### 3. 当前应用自动检测
- `CurrentAppService`：每 1.5s 查一次前台 PID，变化时才做音频会话匹配
- 三种模式：最近使用(recent) / 上次操作(last) / 指定(fixed)

### 4. 全局快捷键
- 动作 → 组合键（如 Ctrl+Alt+Space），注册失败自动回退默认并提示

### 5. 应用自定义名称（v1.0.3）
- config.json `AppNames`：进程名 → 显示名
- 「应用」页选中应用即可重命名，留空保存 = 恢复默认
- `AppDisplayName.Get(app)` 统一解析：有自定义名用自定义名，否则用默认 Label
- 通知/OSD（App.xaml.cs）、面板、概览、应用列表全部走它，改一处全局生效

### 6. 设备自定义名称
- config.json `DeviceNames`：短 ID → 显示名；通知/OSD/列表统一显示

## 构建
```
dotnet build SonicRoute.sln -c Debug
dotnet publish SonicRoute\SonicRoute.csproj -c Release -r win-x64 --self-contained true -p:PublishSingleFile=true ...
```
